# gazebo_rl

./: requirements.txt
docs/: ISSUES.md  README.md
src/car-like-robot-gazebo/robot_gazebo/config/controller_manager/: pav_s03_motor_ctrl_config.yaml
src/car-like-robot-gazebo/robot_gazebo/launch/: try_robot_sim.launch
src/car-like-robot-gazebo/robot_gazebo/urdf/pav_s03/: macros.xacro  pav_s03.gazebo  pav_s03.xacro
src/car-like-robot-gazebo/robot_gazebo/worlds/: empty_obstacle.world  empty_obstacle_randomgoal.world  emptycopy.world  goal_world copy 2.world  goal_world copy.world  goal_world.world  obstacle_world.world  simple_world.world
src/frobs_rl/: package.xml
src/frobs_rl/src/frobs_rl/common/: ros_controllers.py  ros_gazebo.py  ros_params.py  ros_spawn.py  test.py
src/frobs_rl/src/frobs_rl/models/: ppo.py  sac.py
src/frobs_rl/src/frobs_rl/wrappers/: PavsActionWrapper.py  PavsObservWrapper.py  PavsTimeLimitWrapper.py
src/pavs_rl/: CMakeLists.txt  package.xml
src/pavs_rl/config/: dynamic_obj_task.yaml  pavs_task_envs.yaml  ppo_config.yaml  sac_config.yaml  td3_config.yaml  td3_config_V1.yaml
src/pavs_rl/include/: ack_to_servo.h  read_gazebo_odom.h
src/pavs_rl/launch/: pavs_task_env.launch  pavs_train_env.launch  test_env_pavs.launch  test_pavs_RL.launch  test_pavs_predict.launch
src/pavs_rl/scripts/: pavs_train_env.py  spawn_model.py  task_env_pavs.py  test_env_pavs.py  test_pavs_RL.py  test_pavs_RL_predict.py
src/pavs_rl/scripts/pavs_env/: pavs_reach_env.py  pavs_reachavoid_env copy.py  pavs_reachavoid_env.py  pavs_reachavoid_env_V1.py  pavs_reachavoid_env_V10.py  pavs_reachavoid_env_V2.py  pavs_reachavoid_env_V3.py  pavs_reachavoid_env_V4.py  pavs_reachavoid_env_V5.py  pavs_reachavoid_env_V6.py  pavs_reachavoid_env_V7.py  pavs_reachavoid_env_V8.py  pavs_reachavoid_env_V9.py  pavs_reachavoid_env_goods.py  pavs_reachavoid_env_randomgoal.py
src/pavs_rl/scripts/pavs_env/sdf_model/: goal.sdf  goals.sdf  obstacle_static_box.sdf
src/pavs_rl/scripts/tests/: reset_goal_and_obstacle.py  reset_mutl_goal_and_obstacle.py  test_reset_goal copy.py  test_reset_goal.py  test_reset_obstacles.py
src/pavs_rl/simtoreal/: simtoreal.py
src/pavs_rl/src/: gazebo_manager_node.cpp
src/pavs_rl/test/: pavs_reward_analysis.py  pavs_table_reward.py  test.py  testone.py
